--- a/data/resources/ui/window.ui
+++ b/data/resources/ui/window.ui
@@ -41,20 +41,29 @@
           </object>
         </child>
         <child>
-          <object class="AdwBin">
-            <child>
-              <object class="GtkEntry" id="hex_entry"></object>
-            </child>
-          </object>
-        </child>
-        <child>
-          <object class="GtkLabel" id="label">
-            <property name="label" translatable="yes">Hello world!</property>
-            <property name="hexpand">True</property>
-            <property name="vexpand">True</property>
-            <style>
-              <class name="title-header" />
-            </style>
+          <object class="AdwToastOverlay" id="toast_overlay">
+            <property name="child">
+              <object class="GtkBox">
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="AdwBin">
+                    <child>
+                      <object class="ColorEntry" id="hex_entry"></object>
+                    </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkLabel" id="label">
+                    <property name="label" translatable="yes">Hello world!</property>
+                    <property name="hexpand">True</property>
+                    <property name="vexpand">True</property>
+                    <style>
+                      <class name="title-header" />
+                    </style>
+                  </object>
+                </child>
+              </object>
+            </property>
           </object>
         </child>
       </object>
