--- a/data/resources/ui/color-entry.ui
+++ b/data/resources/ui/color-entry.ui
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <template class="ColorEntry" parent="GtkEntry">
-    <signal name="icon-press" handler="icon_pressed" swapped="true" />
+    <signal name="icon-press" handler="on_icon_pressed" swapped="true" />
     <property name="halign">center</property>
     <property name="valign">center</property>
+    <property name="hexpand">False</property>
     <property name="secondary-icon-name">color-select-symbolic</property>
     <property name="secondary-icon-activatable">True</property>
+    <property name="placeholder-text" translatable="yes">Insert a color</property>
     <style>
       <class name="monospace" />
     </style>
