--- a/data/resources/ui/color-entry.ui
+++ b/data/resources/ui/color-entry.ui
@@ -8,6 +8,9 @@
     <property name="secondary-icon-name">color-select-symbolic</property>
     <property name="secondary-icon-activatable">True</property>
     <property name="placeholder-text" translatable="yes">Insert a color</property>
+    <property name="margin-end">6</property>
+    <property name="margin-start">6</property>
+    <property name="margin-top">3</property>
     <style>
       <class name="monospace" />
     </style>
