--- a/data/resources/ui/window.ui
+++ b/data/resources/ui/window.ui
@@ -45,13 +45,57 @@
             <property name="child">
               <object class="GtkBox">
                 <property name="orientation">vertical</property>
-                <property name="halign">center</property>
+                <property name="halign">fill</property>
+                <property name="margin-start">6</property>
+                <property name="margin-end">6</property>
                 <property name="spacing">3</property>
                 <child>
-                  <object class="AdwClamp">
-                    <child>
-                      <object class="ColorEntry" id="hex_entry"></object>
-                    </child>
+                  <object class="ColorEntry" id="hex_entry"></object>
+                </child>
+                <child>
+                  <object class="GtkScale" id="red_color_scale">
+                    <property name="adjustment">color_scale_red</property>
+                    <property name="digits">0</property>
+                    <property name="draw-value">True</property>
+                    <property name="round-digits">0</property>
+                    <property name="show-fill-level">True</property>
+                    <property name="value-pos">right</property>
+                    <style>
+                      <class name="redScale" />
+                    </style>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkScale" id="green_color_scale">
+                    <property name="adjustment">color_scale_green</property>
+                    <property name="digits">0</property>
+                    <property name="draw-value">True</property>
+                    <property name="round-digits">1</property>
+                    <property name="value-pos">right</property>
+                    <style>
+                      <class name="greenScale" />
+                    </style>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkScale" id="blue_color_scale">
+                    <property name="adjustment">color_scale_blue</property>
+                    <property name="digits">0</property>
+                    <property name="draw-value">True</property>
+                    <property name="round-digits">0</property>
+                    <property name="value-pos">right</property>
+                    <style>
+                      <class name="blueScale" />
+                    </style>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkScale" id="alpha_color_scale">
+                    <property name="adjustment">color_scale_alpha</property>
+                    <property name="digits">0</property>
+                    <property name="draw-value">True</property>
+                    <property name="round-digits">1</property>
+                    <property name="value-pos">right</property>
                   </object>
                 </child>
               </object>
@@ -61,4 +105,20 @@
       </object>
     </property>
   </template>
+  <object class="GtkAdjustment" id="color_scale_alpha">
+    <property name="step-increment">1.0</property>
+    <property name="upper">255.0</property>
+  </object>
+  <object class="GtkAdjustment" id="color_scale_blue">
+    <property name="step-increment">1.0</property>
+    <property name="upper">255.0</property>
+  </object>
+  <object class="GtkAdjustment" id="color_scale_green">
+    <property name="step-increment">1.0</property>
+    <property name="upper">255.0</property>
+  </object>
+  <object class="GtkAdjustment" id="color_scale_red">
+    <property name="step-increment">1.0</property>
+    <property name="upper">255.0</property>
+  </object>
 </interface>
