--- a/data/resources/ui/color-scale.ui
+++ b/data/resources/ui/color-scale.ui
@@ -8,7 +8,7 @@
         </child>
         <child>
             <object class="GtkScale" id="scale">
-                <property name="adjustment">color_scale_red</property>
+                <property name="adjustment">color_scale</property>
                 <property name="digits">0</property>
                 <property name="draw-value">True</property>
                 <property name="round-digits">0</property>
@@ -21,7 +21,7 @@
             </object>
         </child>
     </template>
-    <object class="GtkAdjustment" id="color_scale_red">
+    <object class="GtkAdjustment" id="color_scale">
         <property name="step-increment">1.0</property>
         <property name="upper">255.0</property>
     </object>
