added copy button

--- a/data/resources/ui/color-entry.ui
+++ b/data/resources/ui/color-entry.ui
@@ -5,7 +5,7 @@
     <property name="halign">center</property>
     <property name="valign">center</property>
     <property name="hexpand">False</property>
-    <property name="secondary-icon-name">color-select-symbolic</property>
+    <property name="secondary-icon-name">edit-copy-symbolic</property>
     <property name="secondary-icon-activatable">True</property>
     <property name="placeholder-text" translatable="yes">Insert a color</property>
     <property name="margin-end">6</property>
