--- a/data/resources/ui/window.ui
+++ b/data/resources/ui/window.ui
@@ -11,7 +11,7 @@
         <attribute name="action">win.show-help-overlay</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_About GTK Rust Template</attribute>
+        <attribute name="label" translatable="yes">_About Eyedropper</attribute>
         <attribute name="action">app.about</attribute>
       </item>
     </section>
@@ -26,7 +26,7 @@
           <object class="AdwHeaderBar" id="headerbar">
             <property name="title-widget">
               <object class="AdwWindowTitle">
-                <property name="title" translatable="yes">GTK Rust Template</property>
+                <property name="title" translatable="yes">Eyedropper</property>
               </object>
             </property>
             <child>
