--- a/data/resources/ui/window.ui
+++ b/data/resources/ui/window.ui
@@ -53,55 +53,25 @@
           <object class="AdwToastOverlay" id="toast_overlay">
             <property name="child">
               <object class="GtkBox">
-                <property name="orientation">horizontal</property>
+                <property name="orientation">vertical</property>
                 <property name="halign">fill</property>
                 <property name="vexpand">True</property>
                 <property name="vexpand-set">True</property>
-                <property name="spacing">3</property>
+                <!-- <property name="spacing">3</property> -->
                 <child>
-                  <object class="GtkBox">
-                    <property name="orientation">vertical</property>
-                    <child>
-                      <object class="ColorEntry" id="hex_entry"></object>
-                    </child>
-                    <child>
-                      <object class="ColorScale" id="red_scale">
-                        <style>
-                          <class name="redScale" />
-                        </style>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="ColorScale" id="green_scale">
-                        <style>
-                          <class name="greenScale" />
-                        </style>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="ColorScale" id="blue_scale">
-                        <style>
-                          <class name="blueScale" />
-                        </style>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="ColorScale" id="alpha_scale">
-                        <style>
-                          <class name="alphaScale" />
-                        </style>
-                      </object>
-                    </child>
-                  </object>
+                  <object class="ColorModelEntry" id="hex_entry"></object>
                 </child>
                 <child>
-                  <object class="GtkListBox" id="palette_list">
-                    <property name="visible">False</property>
-                    <property name="selection-mode">none</property>
-                    <style>
-                      <class name="boxed-list" />
-                    </style>
-                  </object>
+                  <object class="ColorModelEntry" id="rgb_entry"></object>
+                </child>
+                <child>
+                  <object class="ColorModelEntry" id="hsl_entry"></object>
+                </child>
+                <child>
+                  <object class="ColorModelEntry" id="hsv_entry"></object>
+                </child>
+                <child>
+                  <object class="ColorModelEntry" id="cmyk_entry"></object>
                 </child>
               </object>
             </property>
