--- a/data/resources/ui/window.ui
+++ b/data/resources/ui/window.ui
@@ -38,7 +38,7 @@
             <child>
               <object class="GtkButton" id="color_picker_button">
                 <property name="icon-name">color-select-symbolic</property>
-                <signal name="clicked" handler="color_picker_button_clicked" swapped="true" />
+                <signal name="clicked" handler="on_color_picker_button_clicked" swapped="true" />
               </object>
             </child>
             <child type="end">
@@ -59,19 +59,30 @@
                 <property name="vexpand-set">True</property>
                 <!-- <property name="spacing">3</property> -->
                 <child>
-                  <object class="ColorModelEntry" id="hex_entry"></object>
+                  <object class="GtkColorButton" id="color_button">
+                    <property name="margin-top">12</property>
+                    <property name="margin-start">12</property>
+                    <property name="margin-end">12</property>
+                    <property name="vexpand">True</property>
+                    <property name="width-request">20</property>
+                  </object>
                 </child>
                 <child>
-                  <object class="ColorModelEntry" id="rgb_entry"></object>
+                  <object class="ColorModelEntry" id="hex_entry" />
                 </child>
                 <child>
-                  <object class="ColorModelEntry" id="hsl_entry"></object>
+                  <object class="ColorModelEntry" id="rgb_entry" />
                 </child>
                 <child>
-                  <object class="ColorModelEntry" id="hsv_entry"></object>
+                  <object class="ColorModelEntry" id="hsl_entry" />
                 </child>
                 <child>
-                  <object class="ColorModelEntry" id="cmyk_entry"></object>
+                  <object class="ColorModelEntry" id="hsv_entry" />
+                </child>
+                <child>
+                  <object class="ColorModelEntry" id="cmyk_entry">
+                    <property name="margin-bottom">12</property>
+                  </object>
                 </child>
               </object>
             </property>
