--- a/data/resources/ui/window.ui
+++ b/data/resources/ui/window.ui
@@ -53,35 +53,56 @@
           <object class="AdwToastOverlay" id="toast_overlay">
             <property name="child">
               <object class="GtkBox">
-                <property name="orientation">vertical</property>
-                <property name="halign">fill</property>
-                <property name="vexpand">True</property>
-                <property name="vexpand-set">True</property>
-                <!-- <property name="spacing">3</property> -->
+                <property name="orientation">horizontal</property>
                 <child>
-                  <object class="GtkColorButton" id="color_button">
-                    <property name="margin-top">12</property>
-                    <property name="margin-start">12</property>
-                    <property name="margin-end">12</property>
+                  <object class="GtkBox">
+                    <property name="orientation">vertical</property>
+                    <property name="halign">fill</property>
                     <property name="vexpand">True</property>
-                    <property name="width-request">20</property>
+                    <property name="vexpand-set">True</property>
+                    <!-- <property name="spacing">3</property> -->
+                    <child>
+                      <object class="GtkColorButton" id="color_button">
+                        <property name="margin-top">12</property>
+                        <property name="margin-start">12</property>
+                        <property name="margin-end">12</property>
+                        <property name="vexpand">True</property>
+                        <property name="width-request">20</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="HexEntry" id="hex_entry" />
+                    </child>
+                    <child>
+                      <object class="ColorModelEntry" id="rgb_entry" />
+                    </child>
+                    <child>
+                      <object class="ColorModelEntry" id="hsl_entry" />
+                    </child>
+                    <child>
+                      <object class="ColorModelEntry" id="hsv_entry" />
+                    </child>
+                    <child>
+                      <object class="ColorModelEntry" id="cmyk_entry">
+                        <property name="margin-bottom">12</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
                 <child>
-                  <object class="HexEntry" id="hex_entry" />
+                  <object class="GtkSeparator"></object>
                 </child>
                 <child>
-                  <object class="ColorModelEntry" id="rgb_entry" />
-                </child>
-                <child>
-                  <object class="ColorModelEntry" id="hsl_entry" />
-                </child>
-                <child>
-                  <object class="ColorModelEntry" id="hsv_entry" />
-                </child>
-                <child>
-                  <object class="ColorModelEntry" id="cmyk_entry">
-                    <property name="margin-bottom">12</property>
+                  <object class="GtkScrolledWindow">
+                    <property name="hscrollbar-policy">never</property>
+                    <property name="min-content-height">200</property>
+                    <property name="vexpand">true</property>
+                    <child>
+                      <object class="GtkListBox" id="history_list">
+                        <property name="visible">True</property>
+                        <property name="selection-mode">none</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
