slightly update history items
history items are wrapped around a button for focus to work correctly

--- a/data/resources/ui/window.ui
+++ b/data/resources/ui/window.ui
@@ -101,6 +101,9 @@
                       <object class="GtkListBox" id="history_list">
                         <property name="visible">True</property>
                         <property name="selection-mode">none</property>
+                        <style>
+                          <class name="background" />
+                        </style>
                       </object>
                     </child>
                   </object>
